fix: blurry text in Navbar

--- a/src/styles/global-styles.css
+++ b/src/styles/global-styles.css
@@ -8,6 +8,7 @@ html,
 body {
   font-size: 16px;
   scroll-behavior: smooth;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 body {
   font-family: Roboto, "-apple-system", BlinkMacSystemFont, "Segoe UI", Arial,
